[package]
name = "bitcoin_rust_seeder"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0.0"
chrono = "0.4.41"
futures = "0.3"
tokio = { version = "1.45", features = ["full"] }
rand = "0.9.1"
